--- a/H750VBT6_Simulated_AutoNode/cubemx/cubemx.ioc
+++ b/H750VBT6_Simulated_AutoNode/cubemx/cubemx.ioc
@@ -2,6 +2,26 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+FDCAN1.AutoRetransmission=ENABLE
+FDCAN1.CalculateBaudRateNominal=500000
+FDCAN1.CalculateTimeBitNominal=2000
+FDCAN1.CalculateTimeQuantumNominal=25.0
+FDCAN1.ClockCalibrationCCU=DISABLE
+FDCAN1.DataPrescaler=2
+FDCAN1.DataSyncJumpWidth=6
+FDCAN1.DataTimeSeg1=13
+FDCAN1.DataTimeSeg2=6
+FDCAN1.FrameFormat=FDCAN_FRAME_FD_NO_BRS
+FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateBaudRateNominal,AutoRetransmission,FrameFormat,TransmitPause,NominalSyncJumpWidth,DataPrescaler,ClockCalibrationCCU,NominalPrescaler,CalculateTimeBitNominal,NominalTimeSeg1,NominalTimeSeg2,TxElmtSize,RxBufferSize,RxFifo1ElmtSize,RxFifo0ElmtSize,DataSyncJumpWidth,DataTimeSeg1,DataTimeSeg2
+FDCAN1.NominalPrescaler=2
+FDCAN1.NominalSyncJumpWidth=2
+FDCAN1.NominalTimeSeg1=63
+FDCAN1.NominalTimeSeg2=16
+FDCAN1.RxBufferSize=FDCAN_DATA_BYTES_64
+FDCAN1.RxFifo0ElmtSize=FDCAN_DATA_BYTES_64
+FDCAN1.RxFifo1ElmtSize=FDCAN_DATA_BYTES_64
+FDCAN1.TransmitPause=ENABLE
+FDCAN1.TxElmtSize=FDCAN_DATA_BYTES_64
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -9,23 +29,26 @@ Mcu.CPN=STM32H750VBT6
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=DEBUG
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=USART1
-Mcu.IPNb=6
+Mcu.IP2=FDCAN1
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=USART1
+Mcu.IPNb=7
 Mcu.Name=STM32H750VBTx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC14-OSC32_IN (OSC32_IN)
 Mcu.Pin1=PC15-OSC32_OUT (OSC32_OUT)
+Mcu.Pin10=VP_SYS_VS_Systick
 Mcu.Pin2=PH0-OSC_IN (PH0)
 Mcu.Pin3=PH1-OSC_OUT (PH1)
 Mcu.Pin4=PA9
 Mcu.Pin5=PA10
 Mcu.Pin6=PA13 (JTMS/SWDIO)
 Mcu.Pin7=PA14 (JTCK/SWCLK)
-Mcu.Pin8=VP_SYS_VS_Systick
-Mcu.PinsNb=9
+Mcu.Pin8=PD0
+Mcu.Pin9=PD1
+Mcu.PinsNb=11
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H750VBTx
@@ -33,6 +56,7 @@ MxCube.Version=6.11.0
 MxDb.Version=DB.6.0.110
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.FDCAN1_IT0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -56,6 +80,11 @@ PC14-OSC32_IN\ (OSC32_IN).Mode=LSE-External-Oscillator
 PC14-OSC32_IN\ (OSC32_IN).Signal=RCC_OSC32_IN
 PC15-OSC32_OUT\ (OSC32_OUT).Mode=LSE-External-Oscillator
 PC15-OSC32_OUT\ (OSC32_OUT).Signal=RCC_OSC32_OUT
+PD0.Locked=true
+PD0.Mode=FDCAN_Activate
+PD0.Signal=FDCAN1_RX
+PD1.Mode=FDCAN_Activate
+PD1.Signal=FDCAN1_TX
 PH0-OSC_IN\ (PH0).Mode=HSE-External-Oscillator
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
 PH1-OSC_OUT\ (PH1).Mode=HSE-External-Oscillator
@@ -86,13 +115,13 @@ ProjectManager.ProjectName=cubemx
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
-ProjectManager.TargetToolchain=CMake
+ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
-RCC.ADCFreq_Value=50390625
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+RCC.ADCFreq_Value=268750000
 RCC.AHB12Freq_Value=240000000
 RCC.AHB4Freq_Value=240000000
 RCC.APB1Freq_Value=120000000
@@ -109,20 +138,24 @@ RCC.D1PPRE=RCC_APB3_DIV2
 RCC.D2PPRE1=RCC_APB1_DIV2
 RCC.D2PPRE2=RCC_APB2_DIV2
 RCC.D3PPRE=RCC_APB4_DIV2
-RCC.DFSDMACLkFreq_Value=480000000
+RCC.DFSDMACLkFreq_Value=80000000
 RCC.DFSDMFreq_Value=120000000
 RCC.DIVM1=5
+RCC.DIVM2=6
 RCC.DIVN1=192
 RCC.DIVP1Freq_Value=480000000
-RCC.DIVP2Freq_Value=50390625
+RCC.DIVP2Freq_Value=268750000
 RCC.DIVP3Freq_Value=50390625
-RCC.DIVQ1Freq_Value=480000000
-RCC.DIVQ2Freq_Value=50390625
+RCC.DIVQ1=12
+RCC.DIVQ1Freq_Value=80000000
+RCC.DIVQ2=6
+RCC.DIVQ2Freq_Value=89583333.33333333
 RCC.DIVQ3Freq_Value=50390625
-RCC.DIVR1Freq_Value=480000000
-RCC.DIVR2Freq_Value=50390625
+RCC.DIVR1=12
+RCC.DIVR1Freq_Value=80000000
+RCC.DIVR2Freq_Value=268750000
 RCC.DIVR3Freq_Value=50390625
-RCC.FDCANFreq_Value=480000000
+RCC.FDCANFreq_Value=80000000
 RCC.FMCFreq_Value=240000000
 RCC.FamilyName=M
 RCC.HCLK3ClockFreq_Value=240000000
@@ -132,7 +165,7 @@ RCC.HRTIMFreq_Value=240000000
 RCC.HSE_VALUE=25000000
 RCC.I2C123Freq_Value=120000000
 RCC.I2C4Freq_Value=120000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVN1,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVN1,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
 RCC.LPTIM1Freq_Value=120000000
 RCC.LPTIM2Freq_Value=120000000
 RCC.LPTIM345Freq_Value=120000000
@@ -140,17 +173,18 @@ RCC.LPUART1Freq_Value=120000000
 RCC.LTDCFreq_Value=50390625
 RCC.MCO1PinFreq_Value=64000000
 RCC.MCO2PinFreq_Value=480000000
+RCC.PLLFRACN=0
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.QSPIFreq_Value=240000000
 RCC.RNGFreq_Value=48000000
 RCC.RTCFreq_Value=32000
-RCC.SAI1Freq_Value=480000000
-RCC.SAI23Freq_Value=480000000
-RCC.SAI4AFreq_Value=480000000
-RCC.SAI4BFreq_Value=480000000
-RCC.SDMMCFreq_Value=480000000
-RCC.SPDIFRXFreq_Value=480000000
-RCC.SPI123Freq_Value=480000000
+RCC.SAI1Freq_Value=80000000
+RCC.SAI23Freq_Value=80000000
+RCC.SAI4AFreq_Value=80000000
+RCC.SAI4BFreq_Value=80000000
+RCC.SDMMCFreq_Value=80000000
+RCC.SPDIFRXFreq_Value=80000000
+RCC.SPI123Freq_Value=80000000
 RCC.SPI45Freq_Value=120000000
 RCC.SPI6Freq_Value=120000000
 RCC.SWPMI1Freq_Value=120000000
@@ -158,15 +192,15 @@ RCC.SYSCLKFreq_VALUE=480000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.Tim1OutputFreq_Value=240000000
 RCC.Tim2OutputFreq_Value=240000000
-RCC.TraceFreq_Value=480000000
+RCC.TraceFreq_Value=80000000
 RCC.USART16Freq_Value=120000000
 RCC.USART234578Freq_Value=120000000
-RCC.USBFreq_Value=480000000
+RCC.USBFreq_Value=80000000
 RCC.VCO1OutputFreq_Value=960000000
-RCC.VCO2OutputFreq_Value=100781250
+RCC.VCO2OutputFreq_Value=537500000
 RCC.VCO3OutputFreq_Value=100781250
 RCC.VCOInput1Freq_Value=5000000
-RCC.VCOInput2Freq_Value=781250
+RCC.VCOInput2Freq_Value=4166666.6666666665
 RCC.VCOInput3Freq_Value=781250
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
