--- a/H750VBT6_Simulated_AutoNode/cubemx/cubemx.ioc
+++ b/H750VBT6_Simulated_AutoNode/cubemx/cubemx.ioc
@@ -3,9 +3,9 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 FDCAN1.AutoRetransmission=ENABLE
-FDCAN1.CalculateBaudRateNominal=500000
-FDCAN1.CalculateTimeBitNominal=2000
-FDCAN1.CalculateTimeQuantumNominal=25.0
+FDCAN1.CalculateBaudRateNominal=250000
+FDCAN1.CalculateTimeBitNominal=4000
+FDCAN1.CalculateTimeQuantumNominal=50.0
 FDCAN1.ClockCalibrationCCU=DISABLE
 FDCAN1.DataPrescaler=2
 FDCAN1.DataSyncJumpWidth=6
@@ -57,6 +57,8 @@ MxDb.Version=DB.6.0.110
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.FDCAN1_IT0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.FDCAN1_IT1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.FDCAN_CAL_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -80,9 +82,16 @@ PC14-OSC32_IN\ (OSC32_IN).Mode=LSE-External-Oscillator
 PC14-OSC32_IN\ (OSC32_IN).Signal=RCC_OSC32_IN
 PC15-OSC32_OUT\ (OSC32_OUT).Mode=LSE-External-Oscillator
 PC15-OSC32_OUT\ (OSC32_OUT).Signal=RCC_OSC32_OUT
+PD0.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PD0.GPIO_Mode=GPIO_MODE_AF_PP
+PD0.GPIO_PuPd=GPIO_PULLUP
+PD0.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PD0.Locked=true
 PD0.Mode=FDCAN_Activate
 PD0.Signal=FDCAN1_RX
+PD1.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PD1.GPIO_PuPd=GPIO_PULLUP
+PD1.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PD1.Mode=FDCAN_Activate
 PD1.Signal=FDCAN1_TX
 PH0-OSC_IN\ (PH0).Mode=HSE-External-Oscillator
@@ -138,7 +147,7 @@ RCC.D1PPRE=RCC_APB3_DIV2
 RCC.D2PPRE1=RCC_APB1_DIV2
 RCC.D2PPRE2=RCC_APB2_DIV2
 RCC.D3PPRE=RCC_APB4_DIV2
-RCC.DFSDMACLkFreq_Value=80000000
+RCC.DFSDMACLkFreq_Value=40000000
 RCC.DFSDMFreq_Value=120000000
 RCC.DIVM1=5
 RCC.DIVM2=6
@@ -146,8 +155,8 @@ RCC.DIVN1=192
 RCC.DIVP1Freq_Value=480000000
 RCC.DIVP2Freq_Value=268750000
 RCC.DIVP3Freq_Value=50390625
-RCC.DIVQ1=12
-RCC.DIVQ1Freq_Value=80000000
+RCC.DIVQ1=24
+RCC.DIVQ1Freq_Value=40000000
 RCC.DIVQ2=6
 RCC.DIVQ2Freq_Value=89583333.33333333
 RCC.DIVQ3Freq_Value=50390625
@@ -155,7 +164,7 @@ RCC.DIVR1=12
 RCC.DIVR1Freq_Value=80000000
 RCC.DIVR2Freq_Value=268750000
 RCC.DIVR3Freq_Value=50390625
-RCC.FDCANFreq_Value=80000000
+RCC.FDCANFreq_Value=40000000
 RCC.FMCFreq_Value=240000000
 RCC.FamilyName=M
 RCC.HCLK3ClockFreq_Value=240000000
@@ -178,13 +187,13 @@ RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.QSPIFreq_Value=240000000
 RCC.RNGFreq_Value=48000000
 RCC.RTCFreq_Value=32000
-RCC.SAI1Freq_Value=80000000
-RCC.SAI23Freq_Value=80000000
-RCC.SAI4AFreq_Value=80000000
-RCC.SAI4BFreq_Value=80000000
-RCC.SDMMCFreq_Value=80000000
-RCC.SPDIFRXFreq_Value=80000000
-RCC.SPI123Freq_Value=80000000
+RCC.SAI1Freq_Value=40000000
+RCC.SAI23Freq_Value=40000000
+RCC.SAI4AFreq_Value=40000000
+RCC.SAI4BFreq_Value=40000000
+RCC.SDMMCFreq_Value=40000000
+RCC.SPDIFRXFreq_Value=40000000
+RCC.SPI123Freq_Value=40000000
 RCC.SPI45Freq_Value=120000000
 RCC.SPI6Freq_Value=120000000
 RCC.SWPMI1Freq_Value=120000000
@@ -195,7 +204,7 @@ RCC.Tim2OutputFreq_Value=240000000
 RCC.TraceFreq_Value=80000000
 RCC.USART16Freq_Value=120000000
 RCC.USART234578Freq_Value=120000000
-RCC.USBFreq_Value=80000000
+RCC.USBFreq_Value=40000000
 RCC.VCO1OutputFreq_Value=960000000
 RCC.VCO2OutputFreq_Value=537500000
 RCC.VCO3OutputFreq_Value=100781250
