--- a/H750VBT6_Simulated_AutoNode/cubemx/cubemx.ioc
+++ b/H750VBT6_Simulated_AutoNode/cubemx/cubemx.ioc
@@ -2,6 +2,8 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+ETH.IPParameters=MediaInterface
+ETH.MediaInterface=HAL_ETH_RMII_MODE
 FDCAN1.AutoRetransmission=ENABLE
 FDCAN1.CalculateBaudRateNominal=250000
 FDCAN1.CalculateTimeBitNominal=4000
@@ -11,7 +13,7 @@ FDCAN1.DataPrescaler=2
 FDCAN1.DataSyncJumpWidth=6
 FDCAN1.DataTimeSeg1=13
 FDCAN1.DataTimeSeg2=6
-FDCAN1.FrameFormat=FDCAN_FRAME_FD_NO_BRS
+FDCAN1.FrameFormat=FDCAN_FRAME_FD_BRS
 FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateBaudRateNominal,AutoRetransmission,FrameFormat,TransmitPause,NominalSyncJumpWidth,DataPrescaler,ClockCalibrationCCU,NominalPrescaler,CalculateTimeBitNominal,NominalTimeSeg1,NominalTimeSeg2,TxElmtSize,RxBufferSize,RxFifo1ElmtSize,RxFifo0ElmtSize,DataSyncJumpWidth,DataTimeSeg1,DataTimeSeg2
 FDCAN1.NominalPrescaler=2
 FDCAN1.NominalSyncJumpWidth=2
@@ -22,6 +24,11 @@ FDCAN1.RxFifo0ElmtSize=FDCAN_DATA_BYTES_64
 FDCAN1.RxFifo1ElmtSize=FDCAN_DATA_BYTES_64
 FDCAN1.TransmitPause=ENABLE
 FDCAN1.TxElmtSize=FDCAN_DATA_BYTES_64
+FDCAN2.CalculateBaudRateNominal=500000
+FDCAN2.CalculateTimeBitNominal=2000
+FDCAN2.CalculateTimeQuantumNominal=400.0
+FDCAN2.FrameFormat=FDCAN_FRAME_FD_BRS
+FDCAN2.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,FrameFormat
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -29,26 +36,46 @@ Mcu.CPN=STM32H750VBT6
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=DEBUG
-Mcu.IP2=FDCAN1
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=USART1
-Mcu.IPNb=7
+Mcu.IP2=ETH
+Mcu.IP3=FDCAN1
+Mcu.IP4=FDCAN2
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=SDMMC1
+Mcu.IP8=SYS
+Mcu.IP9=USART1
+Mcu.IPNb=10
 Mcu.Name=STM32H750VBTx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC14-OSC32_IN (OSC32_IN)
 Mcu.Pin1=PC15-OSC32_OUT (OSC32_OUT)
-Mcu.Pin10=VP_SYS_VS_Systick
+Mcu.Pin10=PB11
+Mcu.Pin11=PB12
+Mcu.Pin12=PB13
+Mcu.Pin13=PC8
+Mcu.Pin14=PC9
+Mcu.Pin15=PA9
+Mcu.Pin16=PA10
+Mcu.Pin17=PA13 (JTMS/SWDIO)
+Mcu.Pin18=PA14 (JTCK/SWCLK)
+Mcu.Pin19=PC10
 Mcu.Pin2=PH0-OSC_IN (PH0)
+Mcu.Pin20=PC11
+Mcu.Pin21=PC12
+Mcu.Pin22=PD0
+Mcu.Pin23=PD1
+Mcu.Pin24=PD2
+Mcu.Pin25=PB5
+Mcu.Pin26=PB6
+Mcu.Pin27=VP_SYS_VS_Systick
 Mcu.Pin3=PH1-OSC_OUT (PH1)
-Mcu.Pin4=PA9
-Mcu.Pin5=PA10
-Mcu.Pin6=PA13 (JTMS/SWDIO)
-Mcu.Pin7=PA14 (JTCK/SWCLK)
-Mcu.Pin8=PD0
-Mcu.Pin9=PD1
-Mcu.PinsNb=11
+Mcu.Pin4=PC1
+Mcu.Pin5=PA1
+Mcu.Pin6=PA2
+Mcu.Pin7=PA7
+Mcu.Pin8=PC4
+Mcu.Pin9=PC5
+Mcu.PinsNb=28
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H750VBTx
@@ -68,6 +95,8 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA1.Mode=RMII
+PA1.Signal=ETH_REF_CLK
 PA10.Locked=true
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
@@ -75,13 +104,43 @@ PA13\ (JTMS/SWDIO).Mode=Serial_Wire
 PA13\ (JTMS/SWDIO).Signal=DEBUG_JTMS-SWDIO
 PA14\ (JTCK/SWCLK).Mode=Serial_Wire
 PA14\ (JTCK/SWCLK).Signal=DEBUG_JTCK-SWCLK
+PA2.Mode=RMII
+PA2.Signal=ETH_MDIO
+PA7.Mode=RMII
+PA7.Signal=ETH_CRS_DV
 PA9.Locked=true
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB11.Mode=RMII
+PB11.Signal=ETH_TX_EN
+PB12.Mode=RMII
+PB12.Signal=ETH_TXD0
+PB13.Mode=RMII
+PB13.Signal=ETH_TXD1
+PB5.Mode=FDCAN_Activate
+PB5.Signal=FDCAN2_RX
+PB6.Mode=FDCAN_Activate
+PB6.Signal=FDCAN2_TX
+PC1.Mode=RMII
+PC1.Signal=ETH_MDC
+PC10.Mode=SD_4_bits_Wide_bus
+PC10.Signal=SDMMC1_D2
+PC11.Mode=SD_4_bits_Wide_bus
+PC11.Signal=SDMMC1_D3
+PC12.Mode=SD_4_bits_Wide_bus
+PC12.Signal=SDMMC1_CK
 PC14-OSC32_IN\ (OSC32_IN).Mode=LSE-External-Oscillator
 PC14-OSC32_IN\ (OSC32_IN).Signal=RCC_OSC32_IN
 PC15-OSC32_OUT\ (OSC32_OUT).Mode=LSE-External-Oscillator
 PC15-OSC32_OUT\ (OSC32_OUT).Signal=RCC_OSC32_OUT
+PC4.Mode=RMII
+PC4.Signal=ETH_RXD0
+PC5.Mode=RMII
+PC5.Signal=ETH_RXD1
+PC8.Mode=SD_4_bits_Wide_bus
+PC8.Signal=SDMMC1_D0
+PC9.Mode=SD_4_bits_Wide_bus
+PC9.Signal=SDMMC1_D1
 PD0.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 PD0.GPIO_Mode=GPIO_MODE_AF_PP
 PD0.GPIO_PuPd=GPIO_PULLUP
@@ -94,6 +153,8 @@ PD1.GPIO_PuPd=GPIO_PULLUP
 PD1.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PD1.Mode=FDCAN_Activate
 PD1.Signal=FDCAN1_TX
+PD2.Mode=SD_4_bits_Wide_bus
+PD2.Signal=SDMMC1_CMD
 PH0-OSC_IN\ (PH0).Mode=HSE-External-Oscillator
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
 PH1-OSC_OUT\ (PH1).Mode=HSE-External-Oscillator
@@ -129,7 +190,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,5-MX_ETH_Init-ETH-false-HAL-true,6-MX_FDCAN2_Init-FDCAN2-false-HAL-true,7-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=268750000
 RCC.AHB12Freq_Value=240000000
 RCC.AHB4Freq_Value=240000000
