[FDCAN] Add FDCAN2 and it work ok
Description of Change:

Author:
	sxha951@gmail.com
Reviewer:
	sxha951@gmail.com
Test:
	Pass

--- a/H750VBT6_Simulated_AutoNode/cubemx/cubemx.ioc
+++ b/H750VBT6_Simulated_AutoNode/cubemx/cubemx.ioc
@@ -85,6 +85,8 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.FDCAN1_IT0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.FDCAN1_IT1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.FDCAN2_IT0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.FDCAN2_IT1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.FDCAN_CAL_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -117,8 +119,15 @@ PB12.Mode=RMII
 PB12.Signal=ETH_TXD0
 PB13.Mode=RMII
 PB13.Signal=ETH_TXD1
+PB5.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PB5.GPIO_PuPd=GPIO_PULLUP
+PB5.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB5.Mode=FDCAN_Activate
 PB5.Signal=FDCAN2_RX
+PB6.GPIOParameters=GPIO_Speed,GPIO_FM6,GPIO_PuPd
+PB6.GPIO_FM6=__NULL
+PB6.GPIO_PuPd=GPIO_PULLUP
+PB6.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB6.Mode=FDCAN_Activate
 PB6.Signal=FDCAN2_TX
 PC1.Mode=RMII
