--- a/H750VBT6_Simulated_AutoNode/cubemx/cubemx.ioc
+++ b/H750VBT6_Simulated_AutoNode/cubemx/cubemx.ioc
@@ -2,6 +2,45 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+Dma.Request0=USART1_TX
+Dma.Request1=USART1_RX
+Dma.RequestsNb=2
+Dma.USART1_RX.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART1_RX.1.EventEnable=DISABLE
+Dma.USART1_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART1_RX.1.Instance=DMA1_Stream1
+Dma.USART1_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_RX.1.MemInc=DMA_MINC_ENABLE
+Dma.USART1_RX.1.Mode=DMA_NORMAL
+Dma.USART1_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_RX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_RX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.USART1_RX.1.Priority=DMA_PRIORITY_LOW
+Dma.USART1_RX.1.RequestNumber=1
+Dma.USART1_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.USART1_RX.1.SignalID=NONE
+Dma.USART1_RX.1.SyncEnable=DISABLE
+Dma.USART1_RX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.USART1_RX.1.SyncRequestNumber=1
+Dma.USART1_RX.1.SyncSignalID=NONE
+Dma.USART1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART1_TX.0.EventEnable=DISABLE
+Dma.USART1_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART1_TX.0.Instance=DMA1_Stream0
+Dma.USART1_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_TX.0.MemInc=DMA_MINC_ENABLE
+Dma.USART1_TX.0.Mode=DMA_NORMAL
+Dma.USART1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_TX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.USART1_TX.0.Priority=DMA_PRIORITY_LOW
+Dma.USART1_TX.0.RequestNumber=1
+Dma.USART1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.USART1_TX.0.SignalID=NONE
+Dma.USART1_TX.0.SyncEnable=DISABLE
+Dma.USART1_TX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.USART1_TX.0.SyncRequestNumber=1
+Dma.USART1_TX.0.SyncSignalID=NONE
 ETH.IPParameters=MediaInterface
 ETH.MediaInterface=HAL_ETH_RMII_MODE
 FDCAN1.AutoRetransmission=ENABLE
@@ -36,52 +75,58 @@ Mcu.CPN=STM32H750VBT6
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=DEBUG
-Mcu.IP2=ETH
-Mcu.IP3=FDCAN1
-Mcu.IP4=FDCAN2
-Mcu.IP5=NVIC
-Mcu.IP6=RCC
-Mcu.IP7=SDMMC1
-Mcu.IP8=SYS
-Mcu.IP9=USART1
-Mcu.IPNb=10
+Mcu.IP10=USART1
+Mcu.IP11=USART2
+Mcu.IP2=DMA
+Mcu.IP3=ETH
+Mcu.IP4=FDCAN1
+Mcu.IP5=FDCAN2
+Mcu.IP6=NVIC
+Mcu.IP7=RCC
+Mcu.IP8=SDMMC1
+Mcu.IP9=SYS
+Mcu.IPNb=12
 Mcu.Name=STM32H750VBTx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC14-OSC32_IN (OSC32_IN)
 Mcu.Pin1=PC15-OSC32_OUT (OSC32_OUT)
-Mcu.Pin10=PB11
-Mcu.Pin11=PB12
-Mcu.Pin12=PB13
-Mcu.Pin13=PC8
-Mcu.Pin14=PC9
-Mcu.Pin15=PA9
-Mcu.Pin16=PA10
-Mcu.Pin17=PA13 (JTMS/SWDIO)
-Mcu.Pin18=PA14 (JTCK/SWCLK)
-Mcu.Pin19=PC10
+Mcu.Pin10=PC5
+Mcu.Pin11=PB11
+Mcu.Pin12=PB12
+Mcu.Pin13=PB13
+Mcu.Pin14=PC8
+Mcu.Pin15=PC9
+Mcu.Pin16=PA9
+Mcu.Pin17=PA10
+Mcu.Pin18=PA13 (JTMS/SWDIO)
+Mcu.Pin19=PA14 (JTCK/SWCLK)
 Mcu.Pin2=PH0-OSC_IN (PH0)
-Mcu.Pin20=PC11
-Mcu.Pin21=PC12
-Mcu.Pin22=PD0
-Mcu.Pin23=PD1
-Mcu.Pin24=PD2
-Mcu.Pin25=PB5
-Mcu.Pin26=PB6
-Mcu.Pin27=VP_SYS_VS_Systick
+Mcu.Pin20=PC10
+Mcu.Pin21=PC11
+Mcu.Pin22=PC12
+Mcu.Pin23=PD0
+Mcu.Pin24=PD1
+Mcu.Pin25=PD2
+Mcu.Pin26=PD5
+Mcu.Pin27=PB5
+Mcu.Pin28=PB6
+Mcu.Pin29=VP_SYS_VS_Systick
 Mcu.Pin3=PH1-OSC_OUT (PH1)
 Mcu.Pin4=PC1
 Mcu.Pin5=PA1
 Mcu.Pin6=PA2
-Mcu.Pin7=PA7
-Mcu.Pin8=PC4
-Mcu.Pin9=PC5
-Mcu.PinsNb=28
+Mcu.Pin7=PA3
+Mcu.Pin8=PA7
+Mcu.Pin9=PC4
+Mcu.PinsNb=30
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H750VBTx
 MxCube.Version=6.11.0
 MxDb.Version=DB.6.0.110
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.FDCAN1_IT0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.FDCAN1_IT1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
@@ -97,6 +142,8 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SDMMC1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA1.Mode=RMII
 PA1.Signal=ETH_REF_CLK
@@ -109,6 +156,8 @@ PA14\ (JTCK/SWCLK).Mode=Serial_Wire
 PA14\ (JTCK/SWCLK).Signal=DEBUG_JTCK-SWCLK
 PA2.Mode=RMII
 PA2.Signal=ETH_MDIO
+PA3.Mode=LIN
+PA3.Signal=USART2_RX
 PA7.Mode=RMII
 PA7.Signal=ETH_CRS_DV
 PA9.Locked=true
@@ -165,6 +214,8 @@ PD1.Mode=FDCAN_Activate
 PD1.Signal=FDCAN1_TX
 PD2.Mode=SD_4_bits_Wide_bus
 PD2.Signal=SDMMC1_CMD
+PD5.Mode=LIN
+PD5.Signal=USART2_TX
 PH0-OSC_IN\ (PH0).Mode=HSE-External-Oscillator
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
 PH1-OSC_OUT\ (PH1).Mode=HSE-External-Oscillator
@@ -200,7 +251,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,5-MX_ETH_Init-ETH-false-HAL-true,6-MX_FDCAN2_Init-FDCAN2-false-HAL-true,7-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,5-MX_ETH_Init-ETH-false-HAL-true,6-MX_FDCAN2_Init-FDCAN2-false-HAL-true,7-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true,9-MX_USART1_UART_Init-USART1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=268750000
 RCC.AHB12Freq_Value=240000000
 RCC.AHB4Freq_Value=240000000
@@ -284,6 +335,9 @@ RCC.VCOInput2Freq_Value=4166666.6666666665
 RCC.VCOInput3Freq_Value=781250
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
+USART2.BreakDetectLength=UART_LINBREAKDETECTLENGTH_11B
+USART2.IPParameters=VirtualMode-LIN,BreakDetectLength
+USART2.VirtualMode-LIN=VM_LIN
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
